Entitlements Commit
